--- a/src/components/UI/Layout.module.css
+++ b/src/components/UI/Layout.module.css
@@ -9,3 +9,17 @@
   box-shadow: 5px 10px 18px #888888;
   border-radius: 20px;
 }
+
+@media screen and (max-width: 800px) {
+  .layout {
+    background-color: #fafafa93;
+    text-align: center;
+    margin-top: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    border-radius: 20px;
+  }
+}
