after adding page breakpoints

--- a/src/components/Seat/FlightLayout.module.css
+++ b/src/components/Seat/FlightLayout.module.css
@@ -30,20 +30,22 @@
 @media screen and (max-width: 480px) {
   .flight {
     position: inherit;
-    width: 80px;
-    border-radius: 50px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    width: 130px;
+    border-radius: 90px;
+    padding-top: 90px;
+    padding-bottom: 90px;
+    padding-right: 10%;
+    padding-left: 10%;
     display: flex;
     box-shadow: 3px 7px 12px #0e0d0d;
   }
   .left {
-    width: 33px;
+    width: 50px;
   }
   .aisle {
-    width: 17px;
+    width: 30px;
   }
   .right {
-    width: 33px;
+    width: 50px;
   }
 }
