--- a/src/components/UI/Layout.module.css
+++ b/src/components/UI/Layout.module.css
@@ -12,14 +12,17 @@
 
 @media screen and (max-width: 800px) {
   .layout {
-    background-color: #fafafa93;
-    text-align: center;
-    margin-top: 20px;
-    margin-left: 10%;
-    margin-right: 10%;
-    display: flex;
     flex-direction: column;
-    padding: 10px;
-    border-radius: 20px;
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .layout {
+    margin: auto;
+    padding: 10%;
+    box-shadow: 0px 0px 0px #888888;
+    border-radius: 0px;
   }
 }
